force-app/main/default/objects/CB_Fin_Account__c/CB_Fin_Account__c.object-meta.xml
<CustomObject>
    <description>Read-only mirror of core banking account</description>
    <label>CB Financial Account</label>
    <nameField>
        <displayFormat>CB-FA-{000000}</displayFormat>
        <label>CB Financial Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Financial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>