force-app/main/default/objects/CB_Fin_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <deleteConstraint>Restrict</deleteConstraint>
    <relationshipLabel>CB Financial Accounts</relationshipLabel>
    <relationshipName>CB_Fin_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>