force-app/main/default/objects/CB_Fin_Account__c/fields/Core_Fin_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Core_Fin_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Core Fin Account Id</label>
    <length>50</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>