force-app/main/default/objects/CB_Fin_Account__c/fields/IBAN_Last4__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Last4__c</fullName>
    <label>IBAN Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>