force-app/main/default/objects/CB_Fin_Account__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <label>Onboarding Application</label>
    <referenceTo>CB_Onboarding_Application__c</referenceTo>
    <relationshipLabel>CB Fin Accounts</relationshipLabel>
    <relationshipName>CB_Fin_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>