force-app/main/default/objects/CB_Fin_Account__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>