force-app/main/default/objects/CB_Fin_Account__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Current_Account</fullName><default>false</default><label>Current_Account</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>