force-app/main/default/objects/CB_Fin_Account__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Suspended</fullName><default>false</default><label>Suspended</label></value><value><fullName>Closed</fullName><default>false</default><label>Closed</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>