force-app/main/default/objects/CB_Fin_Account__c/listViews/All_Fin_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Fin_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Onboarding_Application__c</columns>
    <columns>Status__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Sort_Code__c</columns>
    <columns>Account_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fin Accounts</label>
</ListView>